--- a/Music-Player-main/vercel.json
+++ b/Music-Player-main/vercel.json
@@ -2,5 +2,6 @@
     "routes": [
       { "src": "/idcard", "dest": "/" },
       { "src": "/[^.]+", "dest": "/", "status": 200 }
-    ]
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
   }
